# mw160

./: .gitignore  CMakeLists.txt  METRICS_LOG.md  ORCHESTRATOR_RULES.md  README.md
.github/workflows/: build-and-validate.yml  build.yml  release.yml
docs/: BACKLOG.md  QA_REPORT_2026-04-11.md  REFERENCE.md  VISUAL_SPEC.md  calibration-notes.md  host-validation.md
qa-artifacts/: mw160_probe.cpp  probe_output.txt
qa-findings/: ci-status.md  design-impl.md  design-review.md  qa-conformance.md  qa-dsp.md  qa-ux.md
research/: dbx160-hardware-reference.md  dsp-implementation-notes.md  research-summary.md  vca-compressor-hardware-reference.md
scripts/: regenerate_golden.sh  validate_plugin.sh
src/: FactoryPresets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
src/dsp/: Ballistics.cpp  Ballistics.h  Compressor.cpp  Compressor.h  GainComputer.cpp  GainComputer.h  ParameterSmoother.h  RmsDetector.cpp  RmsDetector.h  VcaSaturation.cpp  VcaSaturation.h
src/gui/: CustomLookAndFeel.h  Fonts.h  Geometry.h  LedMeter.h  MeterModeButton.h  Palette.h  Screws.h
tests/: test_aliasing.cpp  test_ballistics.cpp  test_compressor_integration.cpp  test_factory_presets.cpp  test_gain_computer.cpp  test_gain_computer_infinity_ratio.cpp  test_gain_staging_calibration.cpp  test_golden_regression.cpp  test_metering.cpp  test_mix.cpp  test_no_alloc.cpp  test_parameter_smoother_block_independence.cpp  test_parameter_smoothing.cpp  test_performance.cpp  test_plugin_bypass.cpp  test_plugin_parameter_display_names.cpp  test_plugin_parameter_labels.cpp  test_plugin_processor_state.cpp  test_preset_manager.cpp  test_processblock_integration.cpp  test_rms_detector.cpp  test_rms_detector_nan_guard.cpp  test_smoke.cpp  test_stereo_link.cpp  test_timing_calibration.cpp  test_vca_saturation.cpp
tests/golden/: silence.golden  sine_1k_thresh-10_ratio8.golden  sine_1k_thresh-20_ratio4.golden  sine_1k_thresh-20_ratio4_mix50.golden  sine_1k_thresh-20_ratio4_softknee.golden  sine_1k_thresh-20_ratio60.golden  sine_1k_thresh-40_ratio60_extreme.golden  stereo_linked_asym.golden
